edited form layout

--- a/clubSites/publicationsClubs.html
+++ b/clubSites/publicationsClubs.html
@@ -26,10 +26,10 @@
     <div class="main">
       <h1>Publications</h1>
       <h1>Clubs on this page: </h1>
-      <a href="#euphony"><button>DECA</button></a>
-      <a href="#radio"><button>Economics</button></a>
-      <a href="#talon"><button>Startups</button></a>
-      <a href="#yearbook"><button>Stocks</button></a>
+      <a href="#euphony"><button>Euphony</button></a>
+      <a href="#radio"><button>Radio Club</button></a>
+      <a href="#talon"><button>SHS Talon</button></a>
+      <a href="#yearbook"><button>Yearbooks</button></a>
       
 
       <h1 id="euphony">Euphony</h1>
