--- a/clubSites/schoolClubs.html
+++ b/clubSites/schoolClubs.html
@@ -48,8 +48,8 @@
 
       <h1 id="nextgen">Next Generation</h1>
       <p>Times: Afternoon eagle block</p>
-      <p>Sign up </p>
-      <p>kchen2021@sharonschools.net, </p>
+      <p>Sign up https://docs.google.com/forms/d/1Z5oN2KOnRXKyTbg44P7dyv9ywl9allx6huQMcBSU7Eg/prefill</p>
+      <p>kchen2021@sharonschools.net, jlin2021@sharonschools.net</p>
 
       <h1 id="stumentors">Student Mentors</h1>
       <p>Dates: See facebook group</p>
