--- a/clubSites/stemClubs.html
+++ b/clubSites/stemClubs.html
@@ -38,49 +38,63 @@
 
       
 
-      <h2>Science quiz bowl</h2>
+      <h2 id="scienceQuizBowl">Science quiz bowl</h2>
       <p>Wednesday</p>
       <p>3pm</p>
       <p>Zoom link is on schoology group, the code:7PSW-CC89-KBV9D</p>
       <a href="ayi2021@sharonschools.net">ayi2021@sharonschools.net</a>, mli2021@sharonschools.net, kchen2020@sharonschools.net</p>
-      <p>Compete in advanced science topics in trivia format. These topics consist of math, chemis
+      <p>Compete in advanced science topics in trivia format. These topics consist of math, chemistry, enviromental energy, physics, biology, astronomy, etc.</p>
+      <p>Regional competitions at MIT and University of Connecticut</p>
+      <p>Schoology Group Code: 7PSW-CC89-KBV9D</p>
 
 
-      <h2>Latin</h2>
+      <h2 id="latin">Latin</h2>
       <p>Wednesday</p>
-      <p>12:00pm</p>
+      <p>12:00 pm</p>
       <p>Zoom link is on schoology group, the code:K5Mj-6V9M-FSKZV</p>
-      <p>manjari.kannan@gmail.com</p>
+      <p>Contact: manjari.kannan@gmail.com</p>
+      <p>Join Latin Schoology Group: K5MJ-6V9M-FSKZV</p>
+      <p>Trivia based competitions about:</p>
+      <p>Roman Mythology</p>
+      <p>Ancient Roman Culture</p>
+      <p>Grammar in Latin</p>
+      <p>History</p>
+      <p>Compete at universities and schools (such as Princeton, Boston University, Yale, Harvard, Boston Latin School, etc. )
+      <p>Great way to earn awards and prepare for the national latin exam!</p>
+      <p>You don't need to know Latin or be enrolled in the class to join! </p>
 
-      <h2>Computer Science Club</h2>
+      <h2 id="computerScience">Computer Science Club</h2>
       <p>Monday</p>
       <p>2:45</p>
       <p>Zoom link is on schoology group sign up through the email listed below</p>
       <p>hyojp13@gmail.com</p>
+      <p>Learn to code in C++ or Python!</p>
+      <p>Collaborate on interesting projects!</p>
+      <p>Compete in online competitions!</p>
 
-      <h2>Girls Who Code</h2>
+      <h2 id="girlsWhoCode">Girls Who Code</h2>
       <p>Wednesday</p>
       <p>5:00pm</p>
       <p>Zoom link is on schoology group, the code:57F4X-56HHW, you can also additionally join the facebook group with is www.facebook.com/groups/168159040414748/</p>
       <p>zplumridge2022@sharonschools.net, avijayakumar2022@sharonschools.net, mli2021@sharonschools.net</p>
 
-      <h2>Math Team</h2>
+      <h2 id="mathTeam">Math Team</h2>
       <p>Thursday</p>
       <p>2:45pm</p>
       <p>Sign up through the form bit.ly/35K4x1A</p>
       <p>ssiniscalchi@sharonschools.net, akim2021@sharonschools.net, akan2021@sharonschools.net, jxiong2021@sharonschools.net, jzelevinsky2021@sharonschools.net, skaveti2021@sharonschools.net, ssreepada2021@sharonschools.net</p>
 
-      <h2>Science Olympiad</h2>
+      <h2 id="sciOlympiad">Science Olympiad</h2>
       <p>Flexible meeting times throughout the week</p>
       <p>Zoom link is on schoology group, the code: 5FH6T-96875</p>
       <p>aeadara2022@sharonschools.net,  jxiong2021@sharonschools.net, niyengar2021@sharonschools.net, jzelevinsky2021@sharonschools.net, spulukuri2022@sharonschools.net, snalatwad2022@sharonschools.net, tmittal2021@sharonschools.net</p>
 
-      <h2>Sharon Math and Science Tournament</h2>
+      <h2 id="mathAndSciTourn">Sharon Math and Science Tournament</h2>
       <p>Friday</p>
       <p>Zoom link is on schoology group, the code: 9GNM-HP33-C2PP6</p>
       <p>jzelevinsky2021@sharonschools.net, akan2021@sharonschools.net</p>
 
-    <h2>STEM2Schools</h2>
+    <h2 id="stemToSchools">STEM2Schools</h2>
     <p>Wednesdays</p>
     <p>12:30 to 1:00</p>
     <p>Zoom link is on schoology group, the code: 3J9WM-S46TV</p>
