new form attempts

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <small><em>5/5/21</em></small>
         <p>Hello! Thanks for checking out our website! Click on the links in the sidebar to go to categories of clubs, or scroll down to check the calendar and updates. If you'd like to change the information about your club, or post an update here, please complete the form at the bottom of the page. <em>Issues? Reach out to Girls Who Code.</em></p>
       </div>
+
+      <div class="update">
+        <h3>2021-2022 School Year Update</h3>
+        <small><em>8/6/21</em></small>
+        <small><strong>From Girls Who Code to All</strong></small>
+        <p>Most of the information on this website is from the 2020-2021 school year. If you have a new club, would like to post an announcement, or were part of a club that is no longer running, please complete the form at the bottom of the page. <em>Issues? Reach out to Girls Who Code.</em></p>
+      </div>
     </div>
     <!--Refresh button? -->
 
