--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <h2>Updates</h2>
     <div class="updates">
       <div class="update">
+        <h3>2021-2022 School Year Update</h3>
+        <small><em>8/6/21</em></small>
+        <small><strong>From Girls Who Code to All</strong></small>
+        <p>Most of the information on this website is from the 2020-2021 school year. If you have a new club, would like to post an announcement, or were part of a club that is no longer running, please complete the form at the bottom of the page. <em>Issues? Reach out to Girls Who Code.</em></p>
+      </div>
+      
+      <div class="update">
         <h3>Welcome!</h3>
         <small><em>5/5/21</em></small>
         <p>Hello! Thanks for checking out our website! Click on the links in the sidebar to go to categories of clubs, or scroll down to check the calendar and updates. If you'd like to change the information about your club, or post an update here, please complete the form at the bottom of the page. <em>Issues? Reach out to Girls Who Code.</em></p>
@@ -44,20 +51,15 @@
     <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
     <footer>
+      <!--new club form from schoology-->
       <!--add more nav bar, contact us, etc.  -->
       <!-- SHS, SPS websites, schoology-->
       <!-- then copy this footer to other pages-->
-      <form>
-        <h4>Update club information</h4>
-        <label for="nameForm">Your name: </label>
-        <input id="nameForm" type="text"><br><br>
-        <label for="clubNameForm">Club name: </label> <br>
-        <input id="clubNameForm" type="text"> <br> <br>
-        <label for="clubUpdateForm"><em>What's changed? What do you want people to know? (When you meet, where you meet, meeting cancelled for a week, bring materials, plans for next time, etc.)</em></label> <br>
-        <textarea id="clubUpdateForm" type="text" rows="3"> </textarea> <br>
-        <button id="clubChangeSubmit" type="submit">Submit</button>
+      <p><em>The form below is only accessible by logging into your sharon schools account. </em></p>
+      <div updateForm>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8S6YRJayotjiGVzMU0_lS2cwSamoNpNnAlw8eAp2Smk9pig/viewform?embedded=true" width="600px" height="200px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
 
-      </form>
       <br>
       <a href="https://hs.sharonschools.net/en-US">Sharon High School Website</a>
       <a href="https:www.sharon.schoology.com">Schoology</a>
