Embedded google update form into club section pages

--- a/clubSites/miscClubs.html
+++ b/clubSites/miscClubs.html
@@ -120,17 +120,11 @@
       <!--add more nav bar, contact us, etc.  -->
       <!-- SHS, SPS websites, schoology-->
       <!-- then copy this footer to other pages-->
-      <form>
-        <h4>Update club information</h4>
-        <label for="nameForm">Your name: </label>
-        <input id="nameForm" type="text"><br><br>
-        <label for="clubNameForm">Club name: </label> <br>
-        <input id="clubNameForm" type="text"> <br> <br>
-        <label for="clubUpdateForm"><em>What's changed? What do you want people to know? (When you meet, where you meet, meeting cancelled for a week, bring materials, plans for next time, etc.)</em></label> <br>
-        <textarea id="clubUpdateForm" type="text" rows="3"> </textarea> <br>
-        <button id="clubChangeSubmit" type="submit">Submit</button>
-
-      </form>
+      <p><em>The form below is only accessible by logging into your sharon schools account. </em></p>
+      <div updateForm>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8S6YRJayotjiGVzMU0_lS2cwSamoNpNnAlw8eAp2Smk9pig/viewform?embedded=true" width="600px" height="200px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+      
       <br>
       <a href="https://hs.sharonschools.net/en-US">Sharon High School Website</a>
       <a href="https:www.sharon.schoology.com">Schoology</a>
