--- a/clubSites/copyThisClubs.html
+++ b/clubSites/copyThisClubs.html
@@ -37,6 +37,12 @@
       <p>Place</p>
       <p>Contact</p>
     </div>
+
+      <p><em>The form below is only accessible by logging into your sharon schools account. </em></p>
+      <div updateForm>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8S6YRJayotjiGVzMU0_lS2cwSamoNpNnAlw8eAp2Smk9pig/viewform?embedded=true" width="600px" height="200px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+
     <script src="script.js"></script>
   </body>
 </html>
